--- a/assets/scss/_single_product.scss
+++ b/assets/scss/_single_product.scss
@@ -88,6 +88,7 @@
         }
       }
       .item-product {
+        position: relative;
         text-align: center;
         background-color: #ddffd3;
         padding: 10px !important;
@@ -104,6 +105,9 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          top: 22% !important;
+          right: 5% !important;
+          left: auto;
         }
         .woocommerce-loop-product {
           &__title {
@@ -216,6 +220,10 @@
         margin-bottom: 0 !important;
         padding: 10px !important;
         .item-product {
+          .onsale {
+            top: 0 !important;
+            right: 0 !important;
+          }
           .woocommerce-loop-product {
             &__title {
               font-size: 1.2rem;
