--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -91,6 +91,15 @@ button {
     color: #fff;
   }
   &-main {
+    &--nav {
+      #mobile-menu-button {
+        --mb-button-size: 28px;
+        --mb-bar-height: 2px;
+        --mb-bar-width: 0.8;
+        --mb-bar-spacing: 5px;
+        color: #fff;
+      }
+    }
     &--logo {
       position: relative;
       img {
@@ -182,7 +191,7 @@ button {
     }
   }
   &-main {
-    padding-top: 40px;
+    padding: 20px 0;
     .title {
       font-weight: bold;
       font-size: 17px;
@@ -307,6 +316,9 @@ button {
       }
     }
   }
+  &-coppy {
+    border-top: 1px solid #fff;
+  }
 }
 @media screen and (min-width: 769px) {
   .header {
@@ -336,7 +348,7 @@ button {
   }
   .footer {
     &-main {
-      padding-top: 60px;
+      padding: 30px 0;
       .title {
         font-size: 20px;
       }
@@ -467,19 +479,19 @@ aside {
   min-height: calc(100vh - 300px);
 }
 
-@media screen and (max-width: 768px) {
-  .onsale {
-    top: 22% !important;
-    right: 5% !important;
-  }
-}
+// @media screen and (max-width: 768px) {
+//   .onsale {
+//     top: 22% !important;
+//     right: 5% !important;
+//   }
+// }
 
-@media screen and (min-width: 768px) {
-  .onsale {
-    top: 0 !important;
-    right: 0 !important;
-  }
-}
+// @media screen and (min-width: 768px) {
+//   .onsale {
+//     top: 0 !important;
+//     right: 0 !important;
+//   }
+// }
 
 #header.is_login {
   margin-top: 31px;
