--- a/assets/scss/_single_product.scss
+++ b/assets/scss/_single_product.scss
@@ -233,6 +233,7 @@
               justify-content: space-between;
               a:first-child {
                 margin-bottom: 0;
+                width: 40%;
                 img {
                   margin-bottom: 0;
                 }
@@ -241,7 +242,7 @@
                 display: none;
               }
               img {
-                height: 160px !important;
+                height: 100% !important;
                 border-radius: 10px;
               }
               &-text {
